--- a/Advanced-Flask-Lab/templates/index.html
+++ b/Advanced-Flask-Lab/templates/index.html
@@ -15,7 +15,7 @@
 					<header id="header">
 						<span class="avatar"><img src="{{url_for('static',filename='images/avatar.jpg')}}" alt="" /></span>
 
-            <h1>Description</h1>
+            <h1>{{bio}}</h1>
             <br>
             <!-- About me button -->
             <a href="#"><button style="color:white;width:40%" >More about me</button></a>
@@ -38,20 +38,30 @@
                 
                 <div>
                       <a href="">
-                        <img src="static/images/thumbs/01.jpg" alt="" />
-                        <h3>Caption... blah blah blah</h3>
+                        <img src="https://uploads-ssl.webflow.com/5dd64bd3a930f9d04abd1363/5de254f85f1762feee30d664_meet_logo_red.png" alt="" />
+                        <h3>meet</h3>
                       </a>
                 
                       <a href="">
-                        <img src="url_for('static',filename='images/thumbs/02.jpg')" alt="" />
-                        <h3>Caption... blah blah blah</h3>
+                        <img src="{{url_for('static',filename='images/thumbs/02.jpg')}}" alt="" />
+                        <h3>problem</h3>
                       </a>
                 </div>    
                 <div>
                   <a href="">
                         <img src="{{url_for('static',filename='images/thumbs/03.jpg')}}" alt="" />
-                        <h3>Caption... blah blah blah</h3>
+                        <h3>train</h3>
                       </a>
+                      <body>
+                      	<ul>
+        									{% for image_link, caption in posts.items() %}
+            								<li>
+                							<img src="{{ image_link }}" alt="{{ caption }}" width="300" height="200">
+                							<p>{{ caption }}</p>
+            								</li>
+        									{% endfor %}
+    										</ul>
+                      </body>
                 </div>  
 
 							</section>
